[gd_scene load_steps=11 format=3 uid="uid://cxbxjt1k404hs"]

[ext_resource type="Script" uid="uid://cnxdfcnxr5gol" path="res://stage/level_manager.tres.gd" id="1_o2b8k"]
[ext_resource type="Environment" uid="uid://blr33yt3yy80j" path="res://stage/env_level_base.tres" id="2_s0oyp"]
[ext_resource type="PackedScene" uid="uid://qjlvdngd0lqm" path="res://levels/track1/track_1.tscn" id="3_1x5vr"]
[ext_resource type="Texture2D" uid="uid://csul1pwobl3tc" path="res://particles/magic_04.png" id="4_s0oyp"]

[sub_resource type="World3D" id="World3D_u6ye2"]
environment = ExtResource("2_s0oyp")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_er5qh"]
transparency = 1
shading_mode = 0
albedo_color = Color(18.892157, 18.892157, 18.892157, 1)
albedo_texture = ExtResource("4_s0oyp")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_1x5vr"]
material = SubResource("StandardMaterial3D_er5qh")
size = Vector2(0.5, 0.5)

[sub_resource type="Curve" id="Curve_ubsjo"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.46666667, 0.5077801), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="ViewportTexture" id="ViewportTexture_o8aby"]
viewport_path = NodePath("SkyboxViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_nst35"]
viewport_path = NodePath("GameViewport")

[node name="Level Manager" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_o2b8k")

[node name="SkyboxViewport" type="SubViewport" parent="."]
world_3d = SubResource("World3D_u6ye2")
canvas_cull_mask = 4294967294
size = Vector2i(1152, 648)

[node name="SkyboxCamera3D" type="Camera3D" parent="SkyboxViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6150723, 0)
environment = ExtResource("2_s0oyp")

[node name="CPUParticles3D" type="CPUParticles3D" parent="SkyboxViewport"]
cast_shadow = 0
amount = 512
lifetime = 5.0
preprocess = 5.0
fixed_fps = 30
mesh = SubResource("QuadMesh_1x5vr")
emission_shape = 3
emission_box_extents = Vector3(20, 20, 20)
gravity = Vector3(0, -1, 0)
initial_velocity_max = 5.0
angular_velocity_min = -5.0
angular_velocity_max = 5.0
scale_amount_min = 0.5
scale_amount_max = 1.2
scale_amount_curve = SubResource("Curve_ubsjo")

[node name="GameViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1152, 648)

[node name="Track 1" parent="GameViewport" instance=ExtResource("3_1x5vr")]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_o8aby")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_nst35")

[node name="Player UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="Player UI"]
layout_mode = 0
offset_left = 30.0
offset_top = 97.0
offset_right = 247.0
offset_bottom = 137.0

[node name="Label" type="Label" parent="Player UI/Panel"]
layout_mode = 0
offset_right = 216.0
offset_bottom = 39.0
text = "LIVES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="Player UI"]
layout_mode = 0
offset_left = 459.0
offset_top = 40.0
offset_right = 676.0
offset_bottom = 80.0

[node name="Label" type="Label" parent="Player UI/Panel2"]
layout_mode = 0
offset_right = 216.0
offset_bottom = 39.0
text = "TIMER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel3" type="Panel" parent="Player UI"]
layout_mode = 0
offset_left = 909.0
offset_top = 40.0
offset_right = 1126.0
offset_bottom = 80.0

[node name="Label" type="Label" parent="Player UI/Panel3"]
layout_mode = 0
offset_right = 216.0
offset_bottom = 39.0
text = "FISH TREATS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel4" type="Panel" parent="Player UI"]
layout_mode = 0
offset_left = 30.0
offset_top = 40.0
offset_right = 247.0
offset_bottom = 80.0

[node name="Label" type="Label" parent="Player UI/Panel4"]
layout_mode = 0
offset_right = 216.0
offset_bottom = 39.0
text = "SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel5" type="Panel" parent="Player UI"]
layout_mode = 0
offset_left = 30.0
offset_top = 526.0
offset_right = 247.0
offset_bottom = 566.0

[node name="Label" type="Label" parent="Player UI/Panel5"]
layout_mode = 0
offset_left = -2.0
offset_right = 214.0
offset_bottom = 39.0
text = "SPEED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel6" type="Panel" parent="Player UI"]
layout_mode = 0
offset_left = 30.0
offset_top = 577.0
offset_right = 247.0
offset_bottom = 617.0

[node name="Label" type="Label" parent="Player UI/Panel6"]
layout_mode = 0
offset_left = -2.0
offset_right = 214.0
offset_bottom = 39.0
text = "FLOOR #"
horizontal_alignment = 1
vertical_alignment = 1
